--- a/src/java/fr/paris/lutece/portal/resources/search_messages.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages.properties
@@ -25,11 +25,13 @@ manage_indexer.labelIndexersList=Indexation services
 manage_indexer.columnIndexerName=Name
 manage_indexer.columnIndexerVersion=Version
 manage_indexer.columnIndexerDescription=Description
+manage_indexer.columnIndexerPathIndex=PathIndex
 manage_indexer.columnIndexerEnable=Enable
 manage_indexer.IndexerEnable=Enabled
 manage_indexer.IndexerDisable=Disabled
 manage_indexer.buttonDoIndex=Start indexing
-manage_indexer.buttonDoIncrementalIndex=Start incremental indexing
+manage_indexer.buttonDoIncrementalbyBulkIndex=Start incremental by bulk indexing
+manage_indexer.buttonDoIncrementalDirectlyIndex=Start incremental directly indexing
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=Indexation results
