--- a/webapp/WEB-INF/conf/search.properties
+++ b/webapp/WEB-INF/conf/search.properties
@@ -20,6 +20,21 @@ search.lucene.analyser.className=fr.paris.lutece.plugins.lucene.service.analyzer
 ################################################################################
 # Search engine parameters
 search.pageIndexer.baseUrl=@base_url@jsp/site/Portal.jsp
-search.pageIndexer.enable=true
+search.pageIndexer.enable=false
 search.pageSearch.baseUrl=jsp/site/Portal.jsp?page=search
 search.nb.docs.per.page=5
+
+search.mypageIndexer.baseUrl=@base_url@jsp/site/MyPortal.jsp
+search.mypageIndexer.enable=false
+search.mypageSearch.baseUrl=jsp/site/MyPortal.jsp?page=search
+search.nb.docs.per.page=10
+
+search.projetIndexer.baseUrl=@base_url@jsp/site/MyPortal.jsp
+search.projetIndexer.enable=true
+search.projetSearch.baseUrl=jsp/site/MyPortal.jsp?page=search
+search.nb.docs.per.page=10
+
+search.xPageIndexer.baseUrl=@base_url@jsp/site/MyPortal.jsp
+search.xPageIndexer.enable=true
+search.xPageSearch.baseUrl=jsp/site/MyPortal.jsp?page=search
+search.nb.docs.per.page=15
