--- a/src/java/fr/paris/lutece/portal/resources/search_messages.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages.properties
@@ -32,6 +32,7 @@ manage_indexer.IndexerDisable=Disabled
 manage_indexer.buttonDoIndex=Start indexing
 manage_indexer.buttonDoIncrementalbyBulkIndex=Start incremental by bulk indexing
 manage_indexer.buttonDoIncrementalDirectlyIndex=Start incremental directly indexing
+manage_indexer.buttonIndexerLog=Logs
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=Indexation results
