--- a/webapp/WEB-INF/conf/search.properties
+++ b/webapp/WEB-INF/conf/search.properties
@@ -20,7 +20,7 @@ search.lucene.analyser.className=fr.paris.lutece.plugins.lucene.service.analyzer
 ################################################################################
 # Search engine parameters
 search.pageIndexer.baseUrl=@base_url@jsp/site/Portal.jsp
-search.pageIndexer.enable=false
+search.pageIndexer.enable=true
 search.pageSearch.baseUrl=jsp/site/Portal.jsp?page=search
 search.nb.docs.per.page=5
 
