--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>lutece-core</artifactId>
     <packaging>lutece-core</packaging>
     <version>7.0.0-SNAPSHOT</version>
+    <!--mvn install / mvn site assembly-->
     <name>Lutece</name>
     <url>http://dev.lutece.paris.fr/</url>
 
