End of correction except token

--- a/src/java/fr/paris/lutece/portal/resources/search_messages.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages.properties
@@ -33,7 +33,7 @@ manage_indexer.buttonDoIndex=Start indexing
 manage_indexer.buttonDoIncrementalIndex=Start incremental indexing
 manage_indexer.buttonIndexerLog=Logs
 manage_indexer.treatmentDone=Indexing Done !
-
+manage_indexer.treatmentStopped=Indexation Stopped !
 # Template SearchIndexationJspBean
 search_indexation.currentIndexation=There is another indexation
 search_indexation.indexationMode=Unknown Mode set by users : Indexation FAILED
