All corrected -> available New update

--- a/src/java/fr/paris/lutece/portal/resources/search_messages.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages.properties
@@ -34,6 +34,13 @@ manage_indexer.buttonDoIncrementalIndex=Start incremental indexing
 manage_indexer.buttonIndexerLog=Logs
 manage_indexer.treatmentDone=Indexing Done !
 manage_indexer.treatmentStopped=Indexation Stopped !
+manage_indexer.indexation_Mode=Indexation Mode
+manage_indexer.numberOfItemsToProcess=Items to Process
+manage_indexer.numberOfItemsProcessed=Items Processed
+manage_indexer.durationOfTreatment=Duration of Treatment
+manage_indexer.numberOfErrors=Number Of Errors
+manage_indexer.error=Error
+manage_indexer.percentofAvancement=Percent of Avancement
 # Template SearchIndexationJspBean
 search_indexation.currentIndexation=There is another indexation
 search_indexation.indexationMode=Unknown Mode set by users : Indexation FAILED
