--- a/webapp/WEB-INF/conf/config.properties
+++ b/webapp/WEB-INF/conf/config.properties
@@ -6,7 +6,7 @@
 # AutoInit for first deployment
 # If this is true, starting the webapp set it to false and rewrite this file
 # to fill in some defaults from WEB-INF/templates/admin/system/config_properties.html
-autoInit=true
+autoInit=false
 
 ################################################################################
 # Default values for first deployment
@@ -24,7 +24,7 @@ lutece.prod.url=
 lutece.admin.prod.url=
 
 # To force The Base URL use the following entry
-#lutece.base.url=http://localhost:8080/lutece
+#lutece.base.url=http://127.0.0.1/lutece
 
 ################################################################################
 # Portal Lutece HTTPS
@@ -55,7 +55,7 @@ plugin.param.language=fr.fr
 ################################################################################
 # Mail sending parameters (ip address of the mail server)
 # username and password if authentication needed - empty otherwise)
-mail.server=localhost
+mail.server=
 mail.server.port=25
 mail.username=
 mail.password=
@@ -80,15 +80,15 @@ mail.daemon.retryonerror.waittime=60
 mail.daemon.retryonerror.waittime.unit=SECONDS
 
 ################################################################################
-# Indexation (total->FULL or incremental->INCREMENTAL_BY_BULK)
-indexer.param.total=INCREMENTAL_BY_BULK
+# Indexation (total->true or incremental->false)
+indexer.param.total=false
 
 ################################################################################
 # Properties files
-file.lutece.properties=target/lutece/WEB-INF/conf/lutece.properties
-file.webmaster.properties=target/lutece/WEB-INF/conf/webmaster.properties
-file.jtidy.properties=target/lutece/WEB-INF/conf/jtidy.properties
-file.dir.plugins=target/lutece/WEB-INF/conf/plugins
+file.lutece.properties=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/conf/lutece.properties
+file.webmaster.properties=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/conf/webmaster.properties
+file.jtidy.properties=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/conf/jtidy.properties
+file.dir.plugins=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/conf/plugins
 
 ################################################################################
 # Error page management
@@ -113,8 +113,8 @@ lutece.debug.tracePortletXml=false
 
 ################################################################################
 # Site validation
-file.validation.flag=target/lutece/WEB-INF/exploit/validation.flag
-file.amin.validation.flag=target/lutece/WEB-INF/exploit/admin_validation.flag
+file.validation.flag=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/exploit/validation.flag
+file.amin.validation.flag=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/exploit/admin_validation.flag
 
 
 ################################################################################
@@ -125,7 +125,7 @@ file.amin.validation.flag=target/lutece/WEB-INF/exploit/admin_validation.flag
 # Syntax log4j.logger.<logger name>=<level>, <appender 1>, <appender 2>, ...
 
 log4j.rootLogger=ERROR, Error
-log4j.logger.lutece=DEBUG, Console
+log4j.logger.lutece=ERROR, Console
 log4j.logger.lutece.event=INFO, Application, Console
 log4j.additivity.lutece.event=false
 log4j.logger.lutece.error=ERROR, Error, Console
@@ -158,16 +158,16 @@ log4j.logger.org.apache.tika=ERROR, Indexer
 
 # File "error.log"
 log4j.appender.Error=org.apache.log4j.RollingFileAppender
-log4j.appender.Error.File=target/lutece/WEB-INF/logs/error.log
+log4j.appender.Error.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/error.log
 log4j.appender.Error.Append=true
 log4j.appender.Error.layout=org.apache.log4j.PatternLayout
 log4j.appender.Error.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
-log4j.appender.Error.MaxFileSize=1000KB
+log4j.appender.Error.MaxFileSize=10000KB
 log4j.appender.Error.MaxBackupIndex=5
 
 # File "application.log"
 log4j.appender.Application=org.apache.log4j.RollingFileAppender
-log4j.appender.Application.File=target/lutece/WEB-INF/logs/application.log
+log4j.appender.Application.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/application.log
 log4j.appender.Application.Append=true
 log4j.appender.Application.layout=org.apache.log4j.PatternLayout
 log4j.appender.Application.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -176,7 +176,7 @@ log4j.appender.Application.MaxBackupIndex=5
 
 # File "pool.log"
 log4j.appender.Pool=org.apache.log4j.RollingFileAppender
-log4j.appender.Pool.File=target/lutece/WEB-INF/logs/pool.log
+log4j.appender.Pool.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/pool.log
 log4j.appender.Pool.Append=true
 log4j.appender.Pool.layout=org.apache.log4j.PatternLayout
 log4j.appender.Pool.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -185,7 +185,7 @@ log4j.appender.Pool.MaxBackupIndex=5
 
 # File "mail.log"
 log4j.appender.Mail=org.apache.log4j.RollingFileAppender
-log4j.appender.Mail.File=target/lutece/WEB-INF/logs/mail.log
+log4j.appender.Mail.File=/home/mairiedeparis/java prog/Projetjava/target/lutece-test-1.0.0-SNAPSHOT/WEB-INF/logs/mail.log
 log4j.appender.Mail.Append=true
 log4j.appender.Mail.layout=org.apache.log4j.PatternLayout
 log4j.appender.Mail.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -194,7 +194,7 @@ log4j.appender.Mail.MaxBackupIndex=5
 
 # File "PDF.log"
 log4j.appender.PDF=org.apache.log4j.RollingFileAppender
-log4j.appender.PDF.File=target/lutece/WEB-INF/logs/PDF.log
+log4j.appender.PDF.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/PDF.log
 log4j.appender.PDF.Append=true
 log4j.appender.PDF.layout=org.apache.log4j.PatternLayout
 log4j.appender.PDF.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -203,7 +203,7 @@ log4j.appender.PDF.MaxBackupIndex=5
 
 # File "security.log"
 log4j.appender.Security=org.apache.log4j.RollingFileAppender
-log4j.appender.Security.File=target/lutece/WEB-INF/logs/security.log
+log4j.appender.Security.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/security.log
 log4j.appender.Security.Append=true
 log4j.appender.Security.layout=org.apache.log4j.PatternLayout
 log4j.appender.Security.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -212,7 +212,7 @@ log4j.appender.Security.MaxBackupIndex=5
 
 # File "jpa.log"
 log4j.appender.JPA=org.apache.log4j.RollingFileAppender
-log4j.appender.JPA.File=target/lutece/WEB-INF/logs/jpa.log
+log4j.appender.JPA.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/jpa.log
 log4j.appender.JPA.Append=true
 log4j.appender.JPA.layout=org.apache.log4j.PatternLayout
 log4j.appender.JPA.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
@@ -221,11 +221,11 @@ log4j.appender.JPA.MaxBackupIndex=5
 
 # File "indexer.log"
 log4j.appender.Indexer=org.apache.log4j.RollingFileAppender
-log4j.appender.Indexer.File=target/lutece/WEB-INF/logs/indexer.log
+log4j.appender.Indexer.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/indexer.log
 log4j.appender.Indexer.Append=true
 log4j.appender.Indexer.layout=org.apache.log4j.PatternLayout
 log4j.appender.Indexer.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
-log4j.appender.Indexer.MaxFileSize=10000KB
+log4j.appender.Indexer.MaxFileSize=100000KB
 log4j.appender.Indexer.MaxBackupIndex=5
 
 # Console
@@ -238,7 +238,7 @@ log4j.appender.SendMail=org.apache.log4j.net.SMTPAppender
 log4j.appender.SendMail.SMTPHost=
 #log4j.appender.SendMail.SMTPUsername=
 #log4j.appender.SendMail.SMTPPassword=
-log4j.appender.SendMail.Subject=Lutece Error
+log4j.appender.SendMail.Subject=Erreur dans la webapp Lutece
 log4j.appender.SendMail.Threshold=ERROR
 log4j.appender.SendMail.BufferSize=10
 log4j.appender.SendMail.From=noreply@nowhere.org
@@ -246,11 +246,10 @@ log4j.appender.SendMail.To=admin@nowhere.org
 log4j.appender.SendMail.layout=org.apache.log4j.PatternLayout
 log4j.appender.SendMail.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
 
-
 # Admin Access
 # File "admin_access.log"
 log4j.appender.AdminAccess=org.apache.log4j.RollingFileAppender
-log4j.appender.AdminAccess.File=target/lutece/WEB-INF/logs/admin_access.log
+log4j.appender.AdminAccess.File=/home/mairiedeparis/java prog/IndexationDEVELOP/lutece-core/target/lutece/WEB-INF/logs/admin_access.log
 log4j.appender.AdminAccess.Append=true
 log4j.appender.AdminAccess.layout=org.apache.log4j.PatternLayout
 log4j.appender.AdminAccess.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %m%n
