End of Projet Indexation

--- a/src/java/fr/paris/lutece/portal/resources/search_messages.properties
+++ b/src/java/fr/paris/lutece/portal/resources/search_messages.properties
@@ -32,18 +32,18 @@ manage_indexer.IndexerDisable=Disabled
 manage_indexer.buttonDoIndex=Start indexing
 manage_indexer.buttonDoIncrementalIndex=Start incremental indexing
 manage_indexer.buttonIndexerLog=Logs
-manage_indexer.treatmentDone=Indexing Done !
-manage_indexer.treatmentStopped=Indexation Stopped !
-manage_indexer.indexation_Mode=Indexation Mode
-manage_indexer.numberOfItemsToProcess=Items to Process
-manage_indexer.numberOfItemsProcessed=Items Processed
-manage_indexer.durationOfTreatment=Duration of Treatment
-manage_indexer.numberOfErrors=Number Of Errors
+manage_indexer.treatmentDone=Indexing done 
+manage_indexer.treatmentStopped=Indexation stopped 
+manage_indexer.indexation_Mode=Indexation mode
+manage_indexer.numberOfItemsToProcess=Items to process
+manage_indexer.numberOfItemsProcessed=Items processed
+manage_indexer.durationOfTreatment=Duration of treatment
+manage_indexer.numberOfErrors=Number of errors
 manage_indexer.error=Error
-manage_indexer.percentofAvancement=Percent of Avancement
+manage_indexer.percentofAvancement=Percent of avancement
 # Template SearchIndexationJspBean
 search_indexation.currentIndexation=There is another indexation
-search_indexation.indexationMode=Unknown Mode set by users : Indexation FAILED
+search_indexation.indexationMode=Unknown mode set by users : Indexation failed
 
 # Template indexer_logs
 indexer_logs.titleIndexerLogs=Indexation results
